<resources>
    <string name="app_name">Modem Helper</string>
    <string name="action_settings">Settings</string>

    <string-array name="modem_list">
        <item>Huawei HG526</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string name="modem_type">Modem Type: </string>
    <string name="modem_ip">Modem IP:</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="execute">RESET!</string>
    <string name="execute_on">RESET ON</string>
    <string name="about_desc"><![CDATA[
    This is an Modem control APP. Press RESET to rest your Modem if you need. <br/><br/>
        Supported Modem list:<br/><br/>
        1. Huawei HG536<br/><br/>
    email to icehong@gmail.com to get more support <br/><br/>
    Website: https://github.com/icehong/gwreseter <br/><br/>
    ]]>
    </string>
</resources>
